# dnnr

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  syncing.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
dnnr/: __init__.py  dnnr.py  nn_index.py  scaling.py  solver.py
docs/: api.md  installation.md  usage.md
examples/: dnnr_tutorial.ipynb  simple.ipynb
installation/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: __init__.py  conftest.py  test_dnnr.py  test_gradient_scaler.py  test_solver.py
usage/: index.html
